<resources>
    <string name="app_name">FileSharer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">File Sharer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_my_files">My Shared Files</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_profile">Profile</string>
    <string name="refresh_link_button">Refresh</string>
    <string name="file_share">File Share</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="expires">Expires</string>
    <string name="add_files">Add Files</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="copy_url">Copy Url</string>
    <string name="view">View</string>
    <string name="manage">Manage</string>
    <string name="size">Size</string>
</resources>