<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#696969"
    android:foregroundTint="#FFFFFF">

    <Button
        android:id="@+id/manage_link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#262626"
        android:text="@string/manage"
        android:textColor="#d45578"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/link_title"
        android:textSize="20sp"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/link_details"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:text="@string/expires"
        app:layout_constraintStart_toEndOf="@+id/link_title"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>