<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    tools:context=".ui.LoginActivity">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:background="#d45578"
        android:enabled="false"
        android:text="@string/sign_up"
        android:textColor="#192320"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput" />

    <EditText
        android:id="@+id/registerUsernameInput"
        android:layout_width="260dp"
        android:layout_height="51dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="224dp"
        android:background="#262626"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#acacac"
        android:textColorHint="#acacac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerEmailInput"
        android:layout_width="260dp"
        android:layout_height="51dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="144dp"
        android:background="#262626"
        android:ems="10"
        android:textColorHint="#acacac"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#acacac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="260dp"
        android:layout_height="51dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:background="#262626"
        android:ems="10"
        android:textColorHint="#acacac"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#acacac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameInput" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="127dp"
        android:background="#262626"
        android:text="@string/file_share"
        android:textColor="#d45578"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>